# omog_tmp

./: CMakeLists.txt  ROS_todo.txt  package.xml
database_interface/: CMakeLists.txt
database_interface/src/: postgresql_interface_test.cpp
databasesBAK/: esm.backup  findMatch.backup  findOnly.backup
documentation/: node_connections.txt  paramsInFiles.txt  paramsInFiles.txt~  relevantParams.txt  relevantParams.txt~
funcTesting/: db_testing.cpp
include/: ESMlibrary.h  database.h  db_test.cpp  decompose.h  homest_interface.h  homogControlLaw.h  logging.h
junk/: kps.bak.cpp  points.bak.cpp  tmp_ocv_homog.cpp
launch/: simulation.launch  vidfeed.launch
msg/: controlLawInputs.msg  controlLawOutputs.msg  decomposition.msg  features.msg  matchedPoints.msg
param/: homog.yaml  simulation.yaml  vidfeed.yaml  vidfeed.yaml~
scripts/: cleardatabase.sh  directories.sh  saveKeyframes.sh  start.pl
src/: ESMHomographyFilter.cpp  ESMHomographyFilter.cpp~  cvHomog.cpp  db_test_server.cpp.bak  findFeatures.cpp  findFeatures.cpp~  findFeaturesAndMatch.cpp  findFeaturesAndMatch.cpp.backup  homestHomog.cpp  homogControlLaw.cpp  homogDecompose.cpp  matchRawFeatures.cpp
src/old/: config.txt  findFeatures.bak  old_homog.cpp  reset.bash  speedup.cpp  students.cpp  test.cpp
